Update Servlet.java